--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,6 +69,7 @@
     <string name="needMultiplePermissionMsg">This app needs Camera, Storage and Location permissions.</string>
     <string name="gotoPermission">Go to Permissions Option to Grant Permission(s)</string>
     <string name="exit">Exit</string>
+    <string name="dummyShortText">Contrary to popular belief, Lorem Ipsum is not simply random text.</string>
     <string name="dummyLongText">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of \"de Finibus Bonorum et Malorum\" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, \"Lorem ipsum dolor sit amet..\", comes from a line in section 1.10.32. The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from \"de Finibus Bonorum et Malorum\" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham. Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of \"de Finibus Bonorum et Malorum\" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, \"Lorem ipsum dolor sit amet..\", comes from a line in section 1.10.32. The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from \"de Finibus Bonorum et Malorum\" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.\n\nContrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of \"de Finibus Bonorum et Malorum\" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, \"Lorem ipsum dolor sit amet..\", comes from a line in section 1.10.32. The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from \"de Finibus Bonorum et Malorum\" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of \"de Finibus Bonorum et Malorum\" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, \"Lorem ipsum dolor sit amet..\", comes from a line in section 1.10.32. The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from \"de Finibus Bonorum et Malorum\" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.</string>
     <string name="availableBalance">Available Balance</string>
     <string name="cashBackReward">Cashback Reward</string>
@@ -180,6 +181,7 @@
     <string name="mCashWallet">Mcash Wallet</string>
     <string name="vCashWallet">Vcash Wallet</string>
     <string name="withdrawalRequest">Withdrawal Request</string>
+    <string name="withdrawalAmount">Withdrawal Amount</string>
     <string name="withdrawalRequestSubText">One time password has been sent to\nyour registered mobile number or email.</string>
     <string name="enterOTP">Enter OTP</string>
     <string name="submit">Submit</string>
@@ -253,4 +255,18 @@
     <string name="mobile_number">Mobile Number</string>
     <string name="verifymobile">Verify Mobile</string>
     <string name="skip">Skip</string>
+    <string name="rs">\u20B90</string>
+    <string name="proceed">Proceed</string>
+    <string name="ontime">Enter one time password sent to your mobile number</string>
+    <string name="withdrawalRequestsubmit">Withdrawal Request Submitted</string>
+    <string name="tranfer">Transfer</string>
+    <string name="enterpdetailbelow">Enter detail below</string>
+    <string name="conversion">Conversion</string>
+    <string name="enteramontconverted">Enter Amount to be converted</string>
+    <string name="enteramonttobeconverted">Please enter amount for Bonus Wallet convert to mCash Wallet</string>
+    <string name="convertmcash">Convert Mcash successfull</string>
+    <string name="convertmcashtext">Convert MCash</string>
+    <string name="enteramounttobeadded">Enter amount to added</string>
+    <string name="razorpay">Razorpay</string>
+    <string name="mCashloaded">Mcash Loaded Successfully</string>
 </resources>
